--- a/web/Pages/Shared/_Layout.cshtml
+++ b/web/Pages/Shared/_Layout.cshtml
@@ -46,8 +46,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@@aspnet/signalr@@1.1.4/signalr.min.js"></script>
-    <script src="~/js/signalr-client.js" asp-append-version="true"></script>
+    <script src="~/js/signalr/dist/browser/signalr.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
